@@ -1,5 +1,6 @@
   - Convert to Moo
     to not add another dependency because Message::Passing is also Moo based
+  - Fix missing documentation for tls and bind_arguments
 
 0.007  2015-10-28 09:57:00+01:00 Europe/Vienna
   - Add support for headers exchanges
